prevent faq triangle clipping

--- a/hack-at-brown-2015/static/css/index.css
+++ b/hack-at-brown-2015/static/css/index.css
@@ -1066,7 +1066,7 @@ section .background > .right {
 .faq .background > .back {
     width: 2304.8px;
     margin-right: -1018.4px;
-    height: 2220px;
+    height: 2460px;
     background-image: url(/static/img/svgtriangles/0bg_2_darkgrey-triangle.svg);
 }
 
